--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "rec-amplify-dynamo",
+  "description": "A React app using AWS Amplify and DynamoDB on backend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines": {
-    "node": ">=20.5.0"
-  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -13,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.11.0",
     "aws-amplify": "^6.14.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
